03-gitops/components/03-observability/loki/loki-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-route
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gateway-system
  hostnames:
    - loki.serhii.link
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: loki-gateway
          port: 3100
          weight: 1
